maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: error: not found: value estSurBagle
	while(!estFaceMur && !estSurBagle) {
                              ^